[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ezr"
version = "0.1.0"
description = "Explainable multi-objective optimization"
authors = [{name = "Tim Menzies", email = "timm@ieee.org"}]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
ezr = "ezeg:cli"

[tool.setuptools]
py-modules = ["ezr", "ezeg"]


